# daily-stats

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  gbif_citations.py  gbif_dbtools.py  portal_images.py  pyproject.toml  requirements.txt  template.env  twitter.py
daily_stats/: __about__.py  __init__.py  alma_contents.py  cli.py  config.py  dimensions_metrics.py  gbif_citations.py  gbif_dbtools.py  logger.py  package_comp.py  portal_images.py  utils.py
daily_stats/db/: __init__.py  alma.py  base.py  conn.py  engine.py  gbif.py  images.py  packages.py
daily_stats/stats/: __init__.py  alma_contents.py  dimensions_metrics.py  gbif_citations.py  portal_images.py
